refactor: httpRequestHeader를 Map으로 관리하도록 수정